# G

./: CMakeLists.txt  ReadMe.adoc
.github/workflows/: main.yml
include/G/utility/: assert.hpp  breakpoint.hpp  cast.hpp  compare.hpp  endian.hpp  exception.hpp  fixed_string.hpp  macro.hpp  memory.hpp  template_string.hpp  type_traits.hpp
include/G/utility/detail/: constexpr_string_base.hpp
src/: dummy.cpp  macro.hpp
src/image/: image.ixx  pixmap.ixx
src/memory/: memory.ixx
src/simd/: simd.ixx
src/test/: test.ixx
src/utility/: breakpoint.ixx  cast.ixx  charconv.ixx  compare.ixx  constexpr_string_base.ixx  endian.ixx  exception.ixx  fixed_string.ixx  hash.ixx  math.ixx  memory.ixx  template_string.ixx  type_traits.ixx  utility.ixx
standalone_test/: CMakeLists.txt
standalone_test/src/: main.cpp
unit_test/: CMakeLists.txt
unit_test/src/: main.cpp
unit_test/src/image/: test_pixmap.cpp  test_pixmap_view.cpp
